[package]
name = "mw-cas"
version = "0.1.0"
authors = ["Dmitriy <d.razumovskiy@kupibilet.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.4.1"
crossbeam-epoch = "0.8.2"
crossbeam-utils = "0.7.2"
arrayvec = "0.5.1"



[dev-dependencies]
criterion = "0.3"
rayon = "1.4.0"
mimalloc = { version = "0.1", default-features = false }
rand = { version = "0.7",  features = ["small_rng"] }


[profile.bench]
debug = true


[[bench]]
name = "cas2"
harness = false
